--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multi Tasks</title>
   </head>
-  <body dir="rtl">
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
